# slime-audio

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: slime-audio-dashboard.md
native/: Makefile  slime_dj_analyzer.cpp
scripts/: deploy_easter_island_head.sh  slime_audio_analysis_preflight.py  slime_audio_autodj.py  slime_audio_beat_jumps.py  slime_audio_candidates.py  slime_audio_commentary_planner.py  slime_audio_dj.py  slime_audio_drops.py  slime_audio_drum_sync.py  slime_audio_lean_ins.py  slime_audio_live_edit.py  slime_audio_mix_planner.py  slime_audio_playlist_runner.py  slime_audio_sections.py  slime_audio_session.py  slime_audio_session_mixdown.py  slime_audio_session_runner.py  slime_audio_set_report.py  slime_audio_sets.py  slime_audio_stems.py  slime_audio_stream.py  slime_audio_structure_backfill.py  slime_audio_tts.py  slime_audio_vocal_cues.py  slime_audio_web.py  slime_audio_web_smoke.py  slime_music_library.py  slime_music_library_service.py  slime_tunebat_analyzer.js  spogo_cookie_receiver.py
tests/: test_app.py  test_commands.py  test_redact.py  test_slime_audio_analysis_preflight.py  test_slime_audio_autodj.py  test_slime_audio_beat_jumps.py  test_slime_audio_candidates.py  test_slime_audio_commentary_planner.py  test_slime_audio_dj.py  test_slime_audio_drops.py  test_slime_audio_lean_ins.py  test_slime_audio_live_edit.py  test_slime_audio_mix_planner.py  test_slime_audio_playlist_runner.py  test_slime_audio_session.py  test_slime_audio_session_mixdown.py  test_slime_audio_session_runner.py  (+10 more)
(+53 files in other folders)
