[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-brain"
version = "0.1.0"
description = "Agent-safe local Spotify command wrapper."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "squidward-slimelab" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
spotify-brain = "spotify_brain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
